# BrowserAI-Dev

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  smithery.yaml  vercel.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/: browse-anti-hallucination  browse-cite  browse-compare-claims  browse-deep-dive  browse-extract  browse-fact-check  browse-monitor  browse-research  browse-sessions
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-review.yml  deploy.yml  publish-integrations.yml  publish-mcp.yml  publish-pypi.yml  stale.yml
.planning/: BATTLE_PLAN.md
.vercel/output/: config.json
api/: index.ts  mcp.ts
apps/api/: LICENSE  package.json  vitest.config.ts
apps/mcp/: README.md  package.json  server.json
benchmarks/: run_averitec.py  run_climate_fever.py
docs/: launch-video-script.md
examples/: README.md  code-research-agent.py  contradiction-detector.py  crewai-research-team.py  deep-research-agent.py  enterprise-search.py  hallucination-detector.py  langchain-agent.py  llamaindex-agent.py  research-agent.py  research-session.py  streaming-agent.py
examples/coding-agent/: README.md  agent.py  (+1 more)
public/: llms-full.txt  llms.txt  sitemap.xml
scripts/: build-vercel.sh  demo.ts  seed-benchmark.ts
shims/pypi/: README.md  pyproject.toml
shims/pypi/browseai/: __init__.py
src/: App.tsx  index.css  main.tsx
supabase/: config.toml
(+130 files in other folders)
